--- a/style.css
+++ b/style.css
@@ -119,14 +119,27 @@ div.bar .content{
 div.bar .content ul{
     display: flex;
     list-style: none;
+    height: 100%;
     
 }
 div.bar .content ul li{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     font-size: 12px;
     padding: 0 15px;
+    position: relative;
+}
+div.bar .content ul li.active::after{
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #3bb9e3;
+    
 }
 div.bar .content ul li span{
     font-size: 12px;
@@ -138,4 +151,28 @@ div.bar .content ul li strong{
     color: #666580;
     font-weight: bold;
     margin-top: 2px;
+}
+div.bar .content ul li.active strong{
+    color: #3bb9e3;
+}
+div.bar .content .actions {
+    display: flex;
+}
+
+div.bar .content .actions button{
+    height: 34px; 
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #3bb9e3;
+    border: 1px solid #3bb9e3;
+    border-radius: 16px;
+    margin-right: 20px;
+    background: none;
+
 }
